Updated the page

--- a/index.html
+++ b/index.html
@@ -32,29 +32,29 @@
 
         <section id="main_content">
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to TI-tools.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-ti-tools" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to TI-tools.</h3>
 
 <p>This page is a quick place to download all the TI-BASIC tools I've written for the calculator over the years. It is not regularly maintained or updated but merge requests are by all means encouraged. Sometimes I do forget to upload new programs I've written but usually you'll find them sometime before or after a test in math or science classes.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="designer-templates" class="anchor" href="#supported-calculators" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Supported Calculators</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>As I've progressed through using friends' calculators and through several of my own calculators, the calculators these programs are for will tend to change. These programs are categorized by the calculator it was written for, but it is completely possible to use them on any compatible calculator. Currently the only calculator I support is the TI-84 Plus CE.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="creating-pages-manually" class="anchor" href="#adding-programs-yourself" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Adding programs yourself</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>It is quite simple to add a program yourself, simply drag and drop it into the corresponding TI Connect software for your calculator. If you would like to contribute to this repository, email me at the bottom of the page (I will give you credit) and I can add your program. In addition, you can clone the <code>main</code> branch and merge with it later.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Gideon Tong (<a href="https://github.com/gideontong" class="user-mention">@gideontong</a>) is currently the sole maintainer and contributer to the TI Tools repository. Programs may have been based on other programs but all source code is original. Since 2014, several programs have been written in order to help people get those A's on their tests.</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>If you are having trouble using these programs on your calculator and your relentless Google searches do not turn up with anything, or you are unable to enable these programs on your calculator, feel free to shoot me an email at gideontong@splimtech.com!</p>
         </section>
 
         <footer>
